New Crowdin updates (#273)
* New translations cr_strings.xml (Romanian)

* New translations cr_strings.xml (Portuguese)

* New translations cr_strings.xml (Serbian (Latin))

* New translations cr_strings.xml (Hindi)

* New translations cr_strings.xml (Azerbaijani)

* New translations cr_strings.xml (Tamil)

* New translations cr_strings.xml (Persian)

* New translations cr_strings.xml (Indonesian)

* New translations cr_strings.xml (Portuguese, Brazilian)

* New translations cr_strings.xml (Vietnamese)

* New translations cr_strings.xml (Chinese Traditional)

* New translations cr_strings.xml (Chinese Simplified)

* New translations cr_strings.xml (Ukrainian)

* New translations cr_strings.xml (Turkish)

* New translations cr_strings.xml (Slovak)

* New translations cr_strings.xml (Russian)

* New translations cr_strings.xml (Polish)

* New translations cr_strings.xml (French)

* New translations cr_strings.xml (German)

* New translations cr_strings.xml (Spanish)

* New translations cr_strings.xml (Arabic)

* New translations cr_strings.xml (Belarusian)

* New translations cr_strings.xml (Bulgarian)

* New translations cr_strings.xml (Catalan)

* New translations cr_strings.xml (Czech)

* New translations cr_strings.xml (Greek)

* New translations cr_strings.xml (Dutch)

* New translations cr_strings.xml (Finnish)

* New translations cr_strings.xml (Hebrew)

* New translations cr_strings.xml (Hungarian)

* New translations cr_strings.xml (Italian)

* New translations cr_strings.xml (Korean)

* New translations cr_strings.xml (Kurdish)

* New translations cr_strings.xml (Santali)

* New translations cr_strings.xml (Spanish)

* New translations cr_strings.xml (Czech)

* New translations cr_strings.xml (Greek)

* New translations cr_strings.xml (German)

* New translations cr_strings.xml (Hungarian)

* New translations cr_strings.xml (Ukrainian)

* New translations cr_strings.xml (Chinese 

--- a/res/values-ar-rSA/cr_strings.xml
+++ b/res/values-ar-rSA/cr_strings.xml
@@ -158,4 +158,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <!-- Show dock search widget -->
     <string name="dock_search_title">بحث جوجل</string>
     <string name="dock_search_summary">إظهار شريط البحث في القائمة السفلية</string>
+    <!-- Suggestions -->
+    <string name="suggestion_pref_screen_title">الإقتراحات</string>
+    <string name="suggestion_pref_screen_desc">لجميع التطبيقات &amp; اقتراحات الشاشة الرئيسية</string>
 </resources>
