--- a/res/values-de-rDE/cr_strings.xml
+++ b/res/values-de-rDE/cr_strings.xml
@@ -158,4 +158,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <!-- Show dock search widget -->
     <string name="dock_search_title">Google Suchleiste</string>
     <string name="dock_search_summary">Zeige die Suchleiste unten an</string>
+    <!-- Suggestions -->
+    <string name="suggestion_pref_screen_title">App-Vorschläge</string>
+    <string name="suggestion_pref_screen_desc">In Liste aller Apps &amp; auf Startbildschirm</string>
 </resources>
