--- a/res/values-cs-rCZ/cr_strings.xml
+++ b/res/values-cs-rCZ/cr_strings.xml
@@ -158,4 +158,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <!-- Show dock search widget -->
     <string name="dock_search_title">Vyhledávací panel Google</string>
     <string name="dock_search_summary">Zobrazit vyhledávací panel ve spodním doku</string>
+    <!-- Suggestions -->
+    <string name="suggestion_pref_screen_title">Návrhy</string>
+    <string name="suggestion_pref_screen_desc">Pro všechny aplikace a\u00a0návrhy na domácí obrazovce</string>
 </resources>
