--- a/res/values-es-rES/cr_strings.xml
+++ b/res/values-es-rES/cr_strings.xml
@@ -158,4 +158,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <!-- Show dock search widget -->
     <string name="dock_search_title">Barra de búsqueda de Google</string>
     <string name="dock_search_summary">Mostrar la barra de búsqueda en la parte inferior</string>
+    <!-- Suggestions -->
+    <string name="suggestion_pref_screen_title">Sugerencias</string>
+    <string name="suggestion_pref_screen_desc">Sugerencias para todas las aplicaciones en la pantalla de inicio</string>
 </resources>
