--- a/res/values-hu-rHU/cr_strings.xml
+++ b/res/values-hu-rHU/cr_strings.xml
@@ -158,4 +158,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <!-- Show dock search widget -->
     <string name="dock_search_title">Google-keresősáv</string>
     <string name="dock_search_summary">A keresősáv megjelenítése az alsó dokkon</string>
+    <!-- Suggestions -->
+    <string name="suggestion_pref_screen_title">Javaslatok</string>
+    <string name="suggestion_pref_screen_desc">Kezdőképernyőhöz és minden alkalmazáshoz fűződő javaslataink</string>
 </resources>
