--- a/res/values-pt-rBR/cr_strings.xml
+++ b/res/values-pt-rBR/cr_strings.xml
@@ -158,4 +158,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <!-- Show dock search widget -->
     <string name="dock_search_title">Barra de pesquisa do Google</string>
     <string name="dock_search_summary">Mostrar a barra de pesquisa na dock inferior</string>
+    <!-- Suggestions -->
+    <string name="suggestion_pref_screen_title">Sugestões</string>
+    <string name="suggestion_pref_screen_desc">Sugestões de apps na tela inicial e gaveta de aplicativos</string>
 </resources>
