--- a/res/values-uk-rUA/cr_strings.xml
+++ b/res/values-uk-rUA/cr_strings.xml
@@ -158,4 +158,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <!-- Show dock search widget -->
     <string name="dock_search_title">Панель пошуку Google</string>
     <string name="dock_search_summary">Показувати панель пошуку в нижній панелі</string>
+    <!-- Suggestions -->
+    <string name="suggestion_pref_screen_title">Пропозиції</string>
+    <string name="suggestion_pref_screen_desc">Пропозиції в меню додатків та на домашньому екрані</string>
 </resources>
