--- a/res/values-vi-rVN/cr_strings.xml
+++ b/res/values-vi-rVN/cr_strings.xml
@@ -158,4 +158,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <!-- Show dock search widget -->
     <string name="dock_search_title">Thanh tìm kiếm Google</string>
     <string name="dock_search_summary">Hiển thị thanh tìm kiếm trong thanh công cụ dưới cùng</string>
+    <!-- Suggestions -->
+    <string name="suggestion_pref_screen_title">Đề xuất</string>
+    <string name="suggestion_pref_screen_desc">Đối với tất cả ứng dụng &amp; Đề xuất ở màn hình chính</string>
 </resources>
