Launcher3: Introduce Quickspace [updated and heavily squashed]
heavily squashed for future picking purposes..

credits for AICP edits (idk who to put on author list)

Co-authored-by: El Dainosor <eldainosor@gmail.com>
Co-authored-by: Pranav Vashi <neobuddy89@gmail.com>
Co-authored-by: Till Kottmann <me@deletescape.ch>
Co-authored-by: Trishiraj <gamerprince.exp@gmail.com>
Co-authored-by: spkal01 <kalligeross@gmail.com>
Co-authored-by: Chris <chris@cypheros.co>
Co-authored-by: maxwen <max.weninger@gmail.com>
Signed-off-by: str-br <alexfinhart@gmail.com>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -141,4 +141,34 @@
     <!-- Background blur -->
     <string name="background_blur_title">Background blur depth</string>
     <string name="background_blur_summary">Set blur depth level for recents and app drawer</string>
+
+    <!-- QuickSpace -->
+    <string name="show_quickspace_title">At A Glance</string>
+    <string name="show_quickspace_summary">Show at the top of your home screen</string>
+    <string name="abbrev_wday_month_day_no_year" translatable="false">EEEEMMMd</string>
+
+    <string-array translatable="false" name="welcome_message_variants">
+        <item>Good Morning</item>
+        <item>Good Afternoon</item>
+        <item>Good Evening</item>
+        <item>Good Night</item>
+        <item>Too late to stay awake!</item>
+    </string-array>
+
+    <string-array name="quickspace_psa_random">
+        <item>Check the weather just in case</item>
+        <item>Feeling a bit sleepy yet</item>
+        <item>Have you looked outside yet?</item>
+        <item>Let\'s get this done.</item>
+        <item>Hello world! &#128072;</item>
+        <item>Its Game time &#127918;</item>
+        <item>#LightTheNight &#128154;</item>
+        <item>Positive thoughts only</item>
+        <item>See you at pochinki</item>
+        <item>Legends never die, They respawn</item>
+        <item>Winner winner chicken dinner</item>
+        <item>Touch Grass</item>
+    </string-array>
+
+    <string name="custom_date_strings">EEE, MMM d</string>
 </resources>
