--- a/res/values/id.xml
+++ b/res/values/id.xml
@@ -38,4 +38,7 @@
     <item type="id" name="quick_settings_button" />
     <item type="id" name="notifications_button" />
     <item type="id" name="cache_entry_tag_id" />
+    
+    <!-- Quickspace -->
+    <item type="id" name="reserved_container_workspace" />
 </resources>
