--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -418,4 +418,7 @@
     <dimen name="bottom_sheet_handle_height">4dp</dimen>
     <dimen name="bottom_sheet_handle_margin">16dp</dimen>
     <dimen name="bottom_sheet_handle_corner_radius">2dp</dimen>
+
+    <!-- QuickSpace -->
+    <dimen name="quickspace_title_size">22sp</dimen>
 </resources>
