--- a/res/xml/launcher_home_screen_preferences.xml
+++ b/res/xml/launcher_home_screen_preferences.xml
@@ -80,7 +80,14 @@
             android:title="@string/show_top_shadow"
             android:defaultValue="true"
             android:persistent="true" />
-        
+            
+        <SwitchPreference
+            android:key="pref_show_quickspace"
+            android:title="@string/show_quickspace_title"
+            android:summary="@string/show_quickspace_summary"
+            android:defaultValue="true"
+            android:persistent="true"/>
+
         <SwitchPreference
             android:key="pref_desktop_show_labels"
             android:title="@string/desktop_show_labels"
