Launcher3: Introduce At a Glance wannabe
Signed-off-by: str-br <alexfinhart@gmail.com>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/values-v31/colors.xml
+++ b/res/values-v31/colors.xml
@@ -56,4 +56,7 @@
 
     <color name="workspace_accent_color_light">@android:color/system_accent1_100</color>
     <color name="workspace_accent_color_dark">@android:color/system_accent2_600</color>
+    
+    <color name="widget_accent_color_dark">@android:color/system_accent1_600</color>
+    <color name="widget_accent_color_light">@android:color/system_accent1_100</color>
 </resources>
